# phonology2vec

./: .gitignore  README.md  pyproject.toml
notebooks/: 1-phonology-embeddings.ipynb
tests/: test_phonology2vec.py
